// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\"
      }
    }
  }
}"
`;

exports[`default queue behavior 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_TheIncredibleQueue01_032AFBF2\\": {
        \\"name\\": \\"The-Incredible_Queue-01-c8d1a14d\\"
      }
    }
  }
}"
`;

exports[`queue name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "The-Incredible_Queue-01": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Incredible_Queue-01/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The-Incredible_Queue-01",
                "path": "root/Default/The-Incredible_Queue-01",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with a consumer function 1`] = `"new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_68e3f3ae\\"])"`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_QueueOnMessagec5395e41_IamRole_800EDB96\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicy_2E9AE0BB\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicyAttachment_90B64365\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_QueueOnMessagec5395e41_BFDF10CF.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_QueueOnMessagec5395e41_BFDF10CF\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-c5395e41-c87b8107\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-c5395e41-c87b8107\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Code_F10D8CAB.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_QueueOnMessagec5395e41_S3Object_9BE0A142.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_QueueOnMessagec5395e41_Code_F10D8CAB\\": {
        \\"bucket_prefix\\": \\"code-c82147c7-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_QueueOnMessagec5395e41_S3Object_9BE0A142\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Code_F10D8CAB.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with a consumer function 3`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                  "EventSourceMapping": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaEventSourceMapping.LambdaEventSourceMapping",
                      "version": "12.0.1",
                    },
                    "id": "EventSourceMapping",
                    "path": "root/Default/Queue/EventSourceMapping",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "Queue-OnMessage-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Queue",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Code",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.1",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Queue-OnMessage-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Queue-OnMessage-c5395e41",
                "path": "root/Default/Queue-OnMessage-c5395e41",
              },
              "Queue-OnMessageHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "id": "Queue-OnMessageHandler-c5395e41",
                "path": "root/Default/Queue-OnMessageHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_TheIncredibleQueue_453F8E34\\": {
        \\"name\\": \\"The-Incredible-Queue-c8305287\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from queue name 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "The*Incredible$Queue": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/The*Incredible$Queue/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The*Incredible$Queue",
                "path": "root/Default/The*Incredible$Queue",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
